add flask-login, add admin-panel

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
             integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/jumbotron/">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
@@ -173,13 +174,8 @@
     <div class="container py-4">
         <header class="pb-3 mb-4 border-bottom">
             <a href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
-                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="me-2" viewBox="0 0 118 94"
-                     role="img"><title>Bootstrap</title>
-                    <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"
-                          fill="currentColor"></path>
-                </svg>
-                <span class="fs-4">Jumbotron example</span>
+                <i class="bi bi-basket-fill h3 me-2"></i>
+                <span class="fs-4">flask-easy-feedback</span>
             </a>
         </header>
 
@@ -189,19 +185,34 @@
         <div class="row align-items-md-stretch">
             <div class="col-md-6">
                 <div class="h-100 p-5 text-bg-dark rounded-3">
-                    <h2>Change the background</h2>
-                    <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look.
-                        Then, mix and match with additional component themes and more.</p>
-                    <button class="btn btn-outline-light" type="button">Example button</button>
+                    <h2>Посетите наш магизин</h2>
+                    Магазин одежды "Тренд&Уют" – это место, где мода встречается с комфортом!<br>
+                    ✨ Широкий ассортимент для женщин, мужчин и детей<br>
+                    ✨ Актуальные тренды и классические модели<br>
+                    ✨ Качественные материалы и доступные цены<br>
+                    ✨ Удобные примерочные и стильный сервис<br>
+
+                    Обновите гардероб с удовольствием!<br>
+                    📍 Ждем вас по адресу: ул. Модная, 123<br>
+                    📞 Заказы по телефону: +7 (XXX) XXX-XX-XX<br>
+                    🌐 Онлайн-шопинг: trend-uyut.ru<br>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-                    <h2>Add borders</h2>
-                    <p>Or, keep it light and add a border for some added definition to the boundaries of your content.
-                        Be sure to look under the hood at the source HTML here as we've adjusted the alignment and
-                        sizing of both column's content for equal-height.</p>
-                    <button class="btn btn-outline-secondary" type="button">Example button</button>
+                    <h2>Ваш авто – наша забота!</h2>
+                    Сломалась машина? Не беда!<br>
+                    🔧 Быстрый ремонт<br>
+                    🔧 Качественные запчасти<br>
+                    🔧 Гарантия на все работы<br>
+                    🔧 Бесплатная диагностика<br>
+
+                    Приезжайте – и ваш автомобиль снова как новый!<br>
+                    📍 Автосервис "На ходу" – мы всегда на вашей стороне! 🚀<br>
+
+                    📞 Звоните: +7 (XXX) XXX-XX-XX<br>
+                    Или записывайтесь онлайн: autoservice.ru<br>
+
                 </div>
             </div>
         </div>
@@ -214,38 +225,6 @@
 <script src="{{url_for('static', filename='/assets/dist/js/bootstrap.bundle.min.js')}}"></script>
 
 </body>
-{% if form %}
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-     aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">Обратный звонок</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form method="POST">
-                    {{ form.hidden_tag() }}
-                    <div class="mb-3">
-                        {{ form.name.label(class='form-label') }}
-                        {{ form.name(class='form-control') }}
-                    </div>
-                    <div class="mb-3">
-                        {{ form.phone.label(class='form-label') }}
-                        {{ form.phone(class='form-control') }}
-                    </div>
-
-
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-                {{ form.submit( class="btn btn-primary") }}
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-{%endif%}
 
 
 </html>
