--- a/templates/pages.html
+++ b/templates/pages.html
@@ -2,18 +2,18 @@
 {% block content %}
 <div class="p-5 mb-4 bg-body-tertiary rounded-3">
     <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">Добро пожаловать на наш сайт!</h1>
+        <h1 class="display-5 fw-bold">{{page.name}}</h1>
         <p class="col-md-8 fs-4">
-            Мы рады приветствовать вас на нашем сайте. Здесь вы найдете множество полезной информации, актуальные новости и многое другое. Надеемся, что вам у нас понравится!
+            {{page.description}}
         </p>
-        <button class="btn btn-primary btn-lg" type="button">Узнать больше</button>
+
     </div>
 </div>
 
 <div class="row g-4 py-5 row-cols-1  row-cols-lg-3">
     <div class="feature col ">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3">
-            <i class="bi bi-wrench-adjustable"></i>
+            <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"></use></svg>
         </div>
         <h3 class="fs-2 text-body-emphasis">Наши услуги</h3>
         <p>Мы предлагаем широкий спектр услуг, которые помогут вам в решении различных задач. От консультаций до полного сопровождения.</p>
@@ -25,7 +25,7 @@
 
     <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3">
-            <i class="bi bi-universal-access"></i>
+            <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"></use></svg>
         </div>
         <h3 class="fs-2 text-body-emphasis">Наша команда</h3>
         <p>Наша команда состоит из профессионалов своего дела, которые всегда готовы помочь вам и ответить на все ваши вопросы.</p>
@@ -36,7 +36,7 @@
     </div>
     <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3">
-            <i class="bi bi-trophy-fill"></i>
+            <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
         </div>
         <h3 class="fs-2 text-body-emphasis">Наши проекты</h3>
         <p>Мы гордимся нашими проектами, которые реализованы с любовью и вниманием к деталям. Узнайте больше о наших успехах.</p>
