--- a/admin/templates/add_page.html
+++ b/admin/templates/add_page.html
@@ -27,7 +27,7 @@
         {{form.description.label(class = "form-label")}}
         {{form.description(class="form-control", rows="3")}}
     </div>
-    {{form.submit}}
+    {{form.submit(class="btn btn-primary")}}
 </form>
 {%endif%}
 {%endblock%}
