--- a/admin/templates/admin.html
+++ b/admin/templates/admin.html
@@ -29,14 +29,14 @@
     <!-- Навигационная панель -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Админ-панель</a>
+            <a class="navbar-brand" href="{{url_for('admin.index')}}"><i class="bi bi-gear"></i> Админ-панель</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Главная</a>
+                        <a class="nav-link active" aria-current="page" href="{{url_for('admin.index')}}">Главная</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{url_for('admin.pages')}}">Страницы</a>
