--- a/templates/main_fb.html
+++ b/templates/main_fb.html
@@ -20,15 +20,12 @@
                     <p class="lead mb-4">На этой странице вы быстро сможете оставить обратную связь, жалобу или заказать
                         обратный звонок.</p>
                     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                        <a href="/feedback" class="btn btn-danger btn-lg px-4 gap-3">👎 Оставить жалобу</a>
-                        <a  class="btn btn-success btn-lg px-4">❤️ Оставить отзыв</a>
-                    </div>
-                    <div class="d-grid gap-2 mt-2 d-sm-flex justify-content-sm-center">
-
+                        <a href="comment" class="btn btn-success btn-lg px-4">❤️ Оставить отзыв</a>
                         <button type="button" class="btn btn-primary btn-lg px-4" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">📞 Заказать обратный звонок
+                                data-bs-target="#staticBackdrop">📞 Обратный звонок
                         </button>
                     </div>
+
                 </div>
             </div>
 
