--- a/admin/templates/admin.html
+++ b/admin/templates/admin.html
@@ -36,16 +36,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{url_for('admin.index')}}">Главная</a>
+                        <a class="nav-link active" aria-current="page" href="/">Главная</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{url_for('admin.pages')}}">Страницы</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Обратная связь</a>
+                        <a class="nav-link" href="feedback">Отзывы</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Настройки</a>
+                        <a class="nav-link" href="calls">Звонки</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="change_password">Сменить пароль</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="configs">Настройки</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Выход</a>
@@ -59,31 +65,6 @@
     {%block content%}{%endblock%}
     </div>
 
-    <!-- Скрипт для инициализации Chart.js -->
-    <script>
-        // Данные для графика
-        const ctx = document.getElementById('userStatsChart').getContext('2d');
-        const userStatsChart = new Chart(ctx, {
-            type: 'line', // Тип графика (линейный)
-            data: {
-                labels: ['Январь', 'Февраль', 'Март', 'Апрель', 'Май', 'Июнь', 'Июль'],
-                datasets: [{
-                    label: 'Количество пользователей',
-                    data: [100, 200, 300, 400, 500, 600, 700],
-                    backgroundColor: 'rgba(54, 162, 235, 0.2)',
-                    borderColor: 'rgba(54, 162, 235, 1)',
-                    borderWidth: 2
-                }]
-            },
-            options: {
-                scales: {
-                    y: {
-                        beginAtZero: true
-                    }
-                }
-            }
-        });
-    </script>
 
     <!-- Bootstrap 5 JS (с Popper.js) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
