--- a/admin/templates/change_password.html
+++ b/admin/templates/change_password.html
@@ -1,10 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{%extends "admin.html"%}
+{%block content%}
+{% with messages = get_flashed_messages() %}
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-success alert-dismissible fade show w-50 m-auto" role="alert">
+            {{message}}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
+
+<form method="POST">
+    {{ form.hidden_tag() }}
+    <div class="mb-3">
+        {{form.name.label(class = "form-label")}}
+        {{form.name(class="form-control")}}
+    </div>
+    <div class="mb-3">
+        {{form.password.label(class = "form-label")}}
+        {{form.password(class="form-control")}}
+    </div>
+        <div class="mb-3">
+        {{form.password2.label(class = "form-label")}}
+        {{form.password2(class="form-control")}}
+    </div>
+
+    {{form.submit(class="btn btn-primary")}}
+</form>
+
+{%endblock%}
