--- a/templates/base.html
+++ b/templates/base.html
@@ -2,13 +2,13 @@
 <html lang="en" data-bs-theme="auto">
 <head>
     <script src="{{url_for('static', filename='/assets/js/color-modes.js')}}"></script>
-
     <meta charset="utf-8">
+    <title>{{seo_data.title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.122.0">
-    <title>Jumbotron example · Bootstrap v5.3</title>
+    <meta name="description" content="{{seo_data.description}}">
+    <meta name="keywords" content="{{seo_data.keywords}}">
+    <meta name="generator" content="Flask Engine">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{url_for('static', filename='/images/favicon.png')}}">
     <script src="https://code.jquery.com/jquery-3.7.1.js"
             integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
