--- a/admin/templates/calls_list.html
+++ b/admin/templates/calls_list.html
@@ -12,6 +12,7 @@
 {% endwith %}
 
 {% if calls[0] %}
+<div class="m-auto h4 mb-2">Обратные звонки</div>
 <table class="table">
     <thead>
     <tr>
