--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,11 @@
     <meta name="description" content="{{seo_data.description}}">
     <meta name="keywords" content="{{seo_data.keywords}}">
     <meta name="generator" content="Flask Engine">
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+<link
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
+/>
     <link rel="icon" type="image/png" sizes="32x32" href="{{url_for('static', filename='/images/favicon.png')}}">
     <script src="https://code.jquery.com/jquery-3.7.1.js"
             integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
